# cupertino

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  main.py  pyproject.toml  run_crop_image.py  run_draw.py  run_stream_processor.py  run_video.py  run_zone_monitor.py  test_mqtt_pubsub.py  utils.py
config/cupertino_processor/: processor_config.yaml  processor_config_examples.yaml
config/go2rtc/: go2rtc.yaml
cupertino_cli/: README.md  __init__.py  cli.py  mqtt_client.py
cupertino_control/: __init__.py  plane.py  registry.py
cupertino_mqtt/: README.md  __init__.py  subscriber.py
cupertino_mqtt/logging/: __init__.py  events.py  structured.py
cupertino_mqtt/publishers/: __init__.py  base.py  detection.py  zone_event.py
cupertino_mqtt/schemas/: __init__.py  common.py  detection.py  zone_event.py
cupertino_processor/: __init__.py  config.py  model_loader.py  registry.py  service.py
cupertino_zone/: ARCHITECTURE.md  README.md  __init__.py  counter.py  pipeline.py  visualizer.py  zone.py
cupertino_zone/analytics/: __init__.py  counter.py  tracker.py
cupertino_zone/geometry/: __init__.py  detector.py  shapes.py
cupertino_zone/rendering/: __init__.py  visualizer.py
models/: MODEL_CATALOG.md  models.txt
scripts/commands/: add_zone_crossing_line.yaml  add_zone_entrance.yaml  add_zone_exit.yaml  set_model_yolov8n.yaml  set_model_yolov8s.yaml
